# IRassignment2base

./: README.md
rosnavigatePnP/: CMakeLists.txt  package.xml
rosnavigatePnP/action/: TiagoMove.action
rosnavigatePnP/include/rosnavigatePnP/: detector.h  tiago_client.h  tiago_server.h
rosnavigatePnP/src/: detector.cpp  tiago_client.cpp  tiago_server.cpp
